--- a/app/assets/stylesheets/components/_messages_sidebar.scss
+++ b/app/assets/stylesheets/components/_messages_sidebar.scss
@@ -71,3 +71,22 @@
   white-space: nowrap;
   margin-left: 10px;
 }
+
+.chatroom-img-name {
+  display: flex;
+  align-items: center;
+}
+
+.chatroom-avatar-img {
+  height: 8vh;
+  width: 8vh;
+  border-radius: 50%;
+  margin-right: 10px;
+  box-shadow: 2px 2px 1px rgba(81, 51, 93, 0.2);
+}
+
+.chatroom-date-last-message {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
