--- a/app/views/shared/_chatbox.html.erb
+++ b/app/views/shared/_chatbox.html.erb
@@ -10,7 +10,7 @@
   </div>
   <%= simple_form_for [@chatroom, @message],
     html: { class: "d-flex", data: { action: "turbo:submit-end->chatroom-subscription#resetForm" } } do |f| %>
-    <%= f.input :content, label: false, placeholder: "Message", wrapper_html: { class: "flex-grow-1" } %>
+    <%= f.input :content, label: false, class:"message-typing-bar", placeholder: "Message", wrapper_html: { class: "flex-grow-1" } %>
     <%= f.submit "Send", class: "btn-send mb-3" %>
   <% end %>
 </div>
