--- a/app/assets/stylesheets/components/_messages_sidebar.scss
+++ b/app/assets/stylesheets/components/_messages_sidebar.scss
@@ -18,6 +18,7 @@
   border: 1px solid #ddd;
   border-radius: 20px;
   font-size: 16px;
+  margin-top: 20px;
 }
 
 .messages-box {
@@ -36,6 +37,11 @@
   border-radius: 8px;
   margin-bottom: 15px;
   transition: box-shadow 0.3s ease;
+  box-shadow: 2px 2px 2px 1px rgba(175, 105, 189, 0.2);
+  padding: 8px;
+  margin: 10px;
+  border-radius: 8px;
+  background-color: white;
 }
 
 .chatroom-container:hover {
