--- a/app/assets/stylesheets/pages/_mybookings.scss
+++ b/app/assets/stylesheets/pages/_mybookings.scss
@@ -22,8 +22,14 @@
   height: 100%;
   padding-left: 10px;
 
-  h4 {
-    margin-top: 20px;
-    margin-bottom: 4px;
+  h5 {
+    margin-top: 16px;
+    margin-bottom: 5px;
+    font-style: $headers-font;
   }
+}
+
+.mybookingsnorequests {
+  margin: 0px;
+  padding: 20px 20px;
 }
