--- a/app/assets/stylesheets/components/_filter_bar.scss
+++ b/app/assets/stylesheets/components/_filter_bar.scss
@@ -1,31 +1,70 @@
 filter-bar {
   padding: 10px;
 }
+
+#filter_title {
+  font-size: 20px;
+  color:black;
+  font-weight: bold;
+  margin-top: 40px;
+
+}
+
+input[type="checkbox"] {
+  accent-color: #5DADE2;
+}
+
+.list-unstyled {
+  font-size: 17px;
+  margin-left: 10px;
+  margin-bottom: -10px;
+  color: #566573;
+  border-radius: 10px;
+
+}
+
 .btn-reset {
   text-decoration: none;
-  border: none;
-  background: $primary-colour;
+  align-content: center;
+  font-size: 20px;
+  border: 2px solid #566573;
+  background: #A569BD;
   color: white;
   border-radius: 5px;
   height: 40px;
-  width: 100px;
-  margin-left: 10px;
+  width: 90%;
+
+
   &:hover {
-    background: #0a84d5;
+    border: 4px solid #566573;
   }
 }
 
 .accordion-header-button {
   background-color: rgb(246, 247, 249);
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .filter-bar {
   border-radius: 10px;
   box-shadow: 0 3px 10px rgb(194, 194, 194);
-  margin-top: 80px;
 }
+
 
 .accordion-header {
   border-radius: 10px;
+
+
+  .accordion-button {
+    color: black;
+    font-size: 17px;
+
+  }
+
+  .button.accordion-button.collapse::after {
+    color: #A569BD !important;
+  }
 }
