--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container" data-controller="filter-users">
   <div class="row">
     <div class="col-4 col-lg-3 mt-4">
-      <h2>Filter</h2>
+      <h2 id="filter_title">Filter</h2>
       <%= render 'shared/filter_bar' %>
     </div>
     <div class="col-8 col-lg-9" data-filter-users-target="list">
