--- a/app/assets/stylesheets/components/_messages_sidebar.scss
+++ b/app/assets/stylesheets/components/_messages_sidebar.scss
@@ -36,10 +36,11 @@
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   margin-bottom: 15px;
+  margin-left: 0px;
+  margin-top: 10px;
   transition: box-shadow 0.3s ease;
   box-shadow: 2px 2px 2px 1px rgba(175, 105, 189, 0.2);
   padding: 8px;
-  margin: 10px;
   border-radius: 8px;
   background-color: white;
 }
