updated final changes

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -123,6 +123,38 @@
   padding: 0px;
 }
 
+.back-button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+#back-button {
+  background-color: $secondary-colour;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  padding: 5px 20px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+  width: 10vh;
+  margin-bottom: 20px;
+
+  &:hover {
+    background-color: #4b6d8a;
+  }
+}
+
+#back-button p {
+  margin: 0px;
+  padding: 0px;
+}
+
+#back-button h4 {
+  margin-right: 10px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
 #book-button {
   margin-left: 8px;
   background-color: $accent-colour;
