--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
       <%= render 'shared/filter_bar' %>
     </div>
     <div class="col-8 col-lg-9" data-filter-users-target="list">
+      <div class="mb-5"></div>
       <%= render 'shared/user_card', users: @users %>
     </div>
   </div>
