--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -5,7 +5,8 @@
   box-shadow: 0 0 10px rgba(154, 154, 154, 0.2);
   border-radius: 10px;
   margin: 10px;
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   height: 350px;
   color: black;
   display: flex;
