--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <a href="<%= root_path %>" class="nav-links">Home</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-links">Flashcards</a>
+        <a href="<%= users_path %>" class="nav-links">Interviewers</a>
       </li>
       <% if current_user %>
       <li class="nav-item">
@@ -21,7 +21,7 @@
       </li>
       <% end %>
       <li class="nav-item">
-        <a href="<%= myinterviews_path %>" class="nav-links">Interviews</a>
+        <a href="<%= myinterviews_path %>" class="nav-links">My Interviews</a>
       </li>
     </ul>
     <div class="nav-menu-right">
