--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -125,4 +125,5 @@
       </div>
     </div>
   </div>
+  <div class="back-button-container"><%= link_to "back", users_path, id:"back-button", class:"btn btn-primary"%></div>
 </div>
