filter is stylish

--- a/app/views/shared/_filter_bar.html.erb
+++ b/app/views/shared/_filter_bar.html.erb
@@ -3,6 +3,11 @@
     <div class="accordion accordion-flush" id="accordionFlushExample">
       <!-- Years Experience -->
       <div class="accordion-item mb-3">
+        <div class="accordian-header-title">
+          <h2 id="filter_title">Filter</h2>
+        </div>
+      </div>
+      <div class="accordion-item mb-3">
         <h2 class="accordion-header" id="headingYearsExperience">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
             Years Experience
