--- a/app/assets/stylesheets/components/_filter_bar.scss
+++ b/app/assets/stylesheets/components/_filter_bar.scss
@@ -2,12 +2,17 @@ filter-bar {
   padding: 10px;
 }
 
+.filter-bar {
+  margin-top: 40px;
+}
+
 #filter_title {
   font-size: 20px;
-  color:black;
-  font-weight: bold;
-  margin-top: 40px;
-
+  color: #A569BD;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-weight: 500;
 }
 
 input[type="checkbox"] {
@@ -34,10 +39,14 @@ input[type="checkbox"] {
   height: 40px;
   width: 90%;
 
-
   &:hover {
     border: 4px solid #566573;
   }
+}
+
+.accordian-header-title {
+  margin-top: 20px;
+  border-radius: 10px;
 }
 
 .accordion-header-button {
@@ -57,14 +66,14 @@ input[type="checkbox"] {
 .accordion-header {
   border-radius: 10px;
 
-
   .accordion-button {
     color: black;
     font-size: 17px;
-
   }
-
-  .button.accordion-button.collapse::after {
-    color: #A569BD !important;
-  }
+}
+.accordion-button::after {
+  filter: invert(21%) sepia(54%) saturate(3644%) hue-rotate(250deg) brightness(97%) contrast(91%);
+}
+.accordion-button:not(.collapsed)::after {
+  filter: none;
 }
