--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -91,3 +91,10 @@
   font-size: 16px;
   line-height: 1.5;
 }
+
+
+.edit-delete-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
