--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -7,7 +7,16 @@
           <%= f.input :title, placeholder: "Give your review a title..." %>
           <%= f.input :content, placeholder: "Add your review here..." %>
           <%= f.input :rating, required: true, collection: (1..5).to_a, label: "Rate your experience", input_html: {data: {controller: "star-rating", action: "click->form-submit#submit"}} %>
-          <%= f.button :submit, class: 'btn-form' %>
+          <div class="edit-delete-buttons">
+            <div class="submit">
+              <%= f.button :submit, class: "mybookings-accept-button" %>
+            </div>
+            <% if @review.persisted? %>
+              <div class="delete">
+                <%= link_to "Delete review", review_path(@review), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }%>
+              </div>
+            <% end %>
+          </div>
         <% end %>
       </div>
     </div>
