changed filter bar styling

--- a/app/assets/stylesheets/components/_filter_bar.scss
+++ b/app/assets/stylesheets/components/_filter_bar.scss
@@ -3,7 +3,7 @@ filter-bar {
 }
 
 .filter-bar {
-  margin-top: 40px;
+  margin-top: 73px;
 }
 
 #filter_title {
@@ -13,6 +13,7 @@ filter-bar {
   margin-bottom: 20px;
   margin-top: 20px;
   font-weight: 500;
+  padding-top: 15px;
 }
 
 input[type="checkbox"] {
