--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -64,7 +64,7 @@
   margin-top: 5px;
   margin-bottom: 5px;
   width: 100px;
-  font-size: 28px;
+  font-size: 1.2rem;
   color: $primary-colour;
 }
 
