--- a/app/views/shared/_review_card.html.erb
+++ b/app/views/shared/_review_card.html.erb
@@ -3,7 +3,7 @@
   <% @interviewee = review.booking.interviewee %>
     <div class="review-card">
       <div class="review-header">
-        <h3> <% review.title %> </h3>
+        <h3> <%= review.title %> </h3>
       </div>
       <div class="review-user-info">
         <div class="review-user-details">
@@ -12,20 +12,20 @@
           <% else %>
             <img class="review-avatar" alt="avatar" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/User-avatar.svg/2048px-User-avatar.svg.png" />
           <% end %>
-          <span class="review-username"> <% @interviewee.username %> </span>
+          <span class="review-username"> <%= @interviewee.username %> </span>
         </div>
-          <span class="review-date"> <% review.created_at %> </span>
+          <span class="review-date"> <%= review.created_at %> </span>
       </div>
       <div class="review-rating">
         <% review.rating.times do %>
           <i class="fas fa-star star-blue"></i>
         <% end %>
-        <span class="rating-value"><% review.rating %></span>
+        <span class="rating-value"><%= review.rating %></span>
       </div>
       <div class="review-divide">
       </div>
       <div class="review-content">
-        <p><% review.content %></p>
+        <p><%= review.content %></p>
       </div>
     </div>
   <% end %>
