--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -40,7 +40,7 @@
   align-items: center;
 }
 
-.review-avatar {
+.review-avatara {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -50,6 +50,7 @@
 
 .review-username {
   font-weight: bold;
+  margin-left: 15px;
 }
 
 .review-date {
@@ -61,8 +62,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 100px;
   font-size: 1.2rem;
   color: $primary-colour;
