--- a/app/assets/stylesheets/components/_messages_sidebar.scss
+++ b/app/assets/stylesheets/components/_messages_sidebar.scss
@@ -69,7 +69,8 @@
 .last-message {
   margin: 0;
   color: #666;
-  font-size: 0.9em;
+  font-size: 0.8em;
+  margin-left: 5px;
 }
 
 .chatroom-date {
