--- a/app/assets/stylesheets/components/_filter_bar.scss
+++ b/app/assets/stylesheets/components/_filter_bar.scss
@@ -33,15 +33,17 @@ input[type="checkbox"] {
   text-decoration: none;
   align-content: center;
   font-size: 20px;
-  border: 2px solid #566573;
+  border: 1px solid #566573;
   background: #A569BD;
   color: white;
   border-radius: 5px;
   height: 40px;
   width: 90%;
+  transition: background-color 0.2s ease, border 0.2s ease;
 
   &:hover {
-    border: 4px solid #566573;
+    border: 1px solid #566573;
+    background-color: #5DADE2;
   }
 }
 
