--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
   <% end %>
   <div class="nav-extender-buttons">
     <div class="btn btn-primary" id="interviews-panel">
-      <h4>16</h4>
+      <h4> <%= @bookings.count %> </h4>
       <small><p>interviews hosted</p></small>
     </div>
     <div class="btn btn-primary" id="years-exp-panel">
