--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -60,10 +60,10 @@
 
 .review-rating {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 25px;
+  margin-bottom: 20px;
   width: 100px;
   font-size: 1.2rem;
   color: $primary-colour;
